bin_PROGRAMS  = me
AM_CPPFLAGS   = -DSYS_PATH=\"$(pkgdatadir)\"

me_CFLAGS     = -Wno-implicit-function-declaration -Wno-implicit-int	 \
		-Wno-return-type
me_SOURCES    = ansi.c basic.c bind.c buffer.c display.c file.c fileio.c \
		hp150.c line.c lock.c main.c random.c region.c search.c  \
		spawn.c tcap.c termio.c vt52.c window.c word.c 		 \
		ebind.h edef.h efunc.h epath.h estruct.h
